--- a/app/src/main/res/layout/version_item.xml
+++ b/app/src/main/res/layout/version_item.xml
@@ -1,33 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="@dimen/_12sdp"
+    app:cardUseCompatPadding="true"
+
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        tools:ignore="InvalidId,MissingConstraints" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!--    <TextView-->
+        <!--        android:id="@+id/id"-->
+        <!--        android:layout_width="0dp"-->
+        <!--        android:layout_weight="1"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        tools:ignore="InvalidId,MissingConstraints" />-->
 
 
-    <TextView
-        android:id="@+id/pack"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        />
+        <TextView
+            android:id="@+id/pack"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:textSize="@dimen/_16ssp"
+            android:padding="@dimen/_10sdp"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints"
+            android:layout_marginLeft="@dimen/_6sdp"
+            android:background="@color/new_pink"
+            />
 
-    <TextView
-        android:id="@+id/versio"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        tools:ignore="InvalidId,MissingConstraints" />
+        <TextView
+            android:id="@+id/versio"
+            android:textSize="@dimen/_16ssp"
+            android:padding="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            tools:ignore="InvalidId,MissingConstraints"
+            android:background="@color/pink"/>
 
 
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
